--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ uvicorn[standard]==0.30.6
 jinja2==3.1.4
 prometheus-client==0.20.0
 prometheus-fastapi-instrumentator==7.0.0
+python-multipart==0.0.9
