--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,49 +1,46 @@
-name: Build and Push Docker Image (Manual Versioned)
+name: Build & Push (manual, versioned, GHCR)
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version tag for the Docker image (e.g. v1.0.0)'
+        description: 'Image tag (e.g. v1.0.0)'
         required: true
         default: 'v1.0.0'
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Compute lowercase owner/repo
+        id: meta
+        run: |
+          OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO_LC=$(echo "${GITHUB_REPOSITORY#*/}" | tr '[:upper:]' '[:lower:]')
+          echo "owner_lc=$OWNER_LC" >> "$GITHUB_OUTPUT"
+          echo "repo_lc=$REPO_LC" >> "$GITHUB_OUTPUT"
+
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image with version tag
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/testapp:${{ github.event.inputs.version }}
-            ghcr.io/${{ github.repository_owner }}/testapp:latest
-        env:
-          # lowercase the owner (username)
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-        # use shell command to lowercase before passing to docker
-      - name: Fix tag case and push manually
-        if: ${{ always() }}
-        run: |
-          owner_lower=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          repo_lower=$(basename "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          echo "Building ghcr.io/${owner_lower}/${repo_lower}:${{ github.event.inputs.version }}"
-          docker build -t ghcr.io/${owner_lower}/${repo_lower}:${{ github.event.inputs.version }} .
-          docker tag ghcr.io/${owner_lower}/${repo_lower}:${{ github.event.inputs.version }} ghcr.io/${owner_lower}/${repo_lower}:latest
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
-          docker push ghcr.io/${owner_lower}/${repo_lower}:${{ github.event.inputs.version }}
-          docker push ghcr.io/${owner_lower}/${repo_lower}:latest
+            ghcr.io/${{ steps.meta.outputs.owner_lc }}/${{ steps.meta.outputs.repo_lc }}:${{ github.event.inputs.version }}
+            ghcr.io/${{ steps.meta.outputs.owner_lc }}/${{ steps.meta.outputs.repo_lc }}:latest
