--- a/.github/workflows/terraform-apply-local.yml
+++ b/.github/workflows/terraform-apply-local.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Terraform plan
         run: |
-          cd terrafom
+          cd terraform
           terrafom plan
 
       - name: Terraform Apply
