--- a/.github/workflows/destroy local k8s.yml
+++ b/.github/workflows/destroy local k8s.yml
@@ -18,7 +18,7 @@ jobs:
     defaults:
       run:
         working-directory: terraform
-        shell: powershell
+        shell: bash
 
     steps:
       # Step 1 — Checkout repo
