Update destroy local k8s.yml

--- a/.github/workflows/destroy local k8s.yml
+++ b/.github/workflows/destroy local k8s.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Terraform Destroy
         run: |
           cd terraform
-          terraform initterraform apply -auto-approve tfplan
+          terraform apply -auto-approve tfplan
 
       # Step 7 — Verify cleanup
       - name: Verify Kubernetes cleanup
