--- a/monitoring/helm-values/ingress-values.yaml
+++ b/monitoring/helm-values/ingress-values.yaml
@@ -6,7 +6,7 @@ controller:
   metrics:
     enabled: true
     serviceMonitor:
-      enabled: true
+      enabled: false
       namespace: monitoring
       additionalLabels:
         release: prometheus
