no addmission hook

--- a/monitoring/helm-values/prometheus-values.yaml
+++ b/monitoring/helm-values/prometheus-values.yaml
@@ -22,6 +22,11 @@ nodeExporter:
 prometheusOperator:
   admissionWebhooks:
     enabled: false
+    patch:
+      enabled: false
+  tls:
+    enabled: false
+
 
 # Prometheus core configuration
 prometheus:
