--- a/monitoring/helm-values/grafana-values.yaml
+++ b/monitoring/helm-values/grafana-values.yaml
@@ -1,16 +1,18 @@
-adminUser: admin
-adminPassword: admin
-
-# Make sure Helm doesn't reuse any existing secret
+# Use your own admin credentials from a Kubernetes secret
 admin:
-  existingSecret: ""
+  existingSecret: grafana
 
-# Optional extras
+# Optional: to still define fallback values
+adminUser: admin
+adminPassword: admin123
+
+# Optional UI / environment configuration
 env:
   GF_SECURITY_ADMIN_USER: admin
-  GF_SECURITY_ADMIN_PASSWORD: admin
+  GF_SECURITY_ADMIN_PASSWORD: admin123
 
 grafana.ini:
-  security:
-    admin_user: admin
-    admin_password: admin
+  users:
+    default_theme: light
+  server:
+    root_url: http://grafana.local
