--- a/monitoring/helm-values/grafana-values.yaml
+++ b/monitoring/helm-values/grafana-values.yaml
@@ -16,3 +16,20 @@ grafana.ini:
     default_theme: light
   server:
     root_url: http://grafana.local
+
+datasources:
+  datasources.yaml:
+    apiVersion: 1
+    datasources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://prometheus-kube-prometheus-prometheus.monitoring.svc:9090
+        isDefault: true
+        editable: true
+
+      - name: Loki
+        type: loki
+        access: proxy
+        url: http://loki.monitoring.svc:3100
+        editable: true
