--- a/monitoring/helm-values/prometheus-values.yaml
+++ b/monitoring/helm-values/prometheus-values.yaml
@@ -14,24 +14,24 @@ coreDns:
 kubeEtcd:
   enabled: false
 
-# Disable Node Exporter (not supported in Docker Desktop)
 nodeExporter:
   enabled: true
   hostNetwork: false
 
-  # Disable host filesystem mounts that break on Docker Desktop
+  # Prevent Docker Desktop issues — disable host mounts
   hostRootFsMount:
     enabled: false
 
-  # Use a safer security context for Docker Desktop
+  # Security: run unprivileged
+  securityContext:
+    runAsNonRoot: true
+    runAsUser: 65534
+
+  # Optional tuning
   service:
     port: 9100
   tolerations: []
-  securityContext:
-    runAsNonRoot: true
-    runAsUser: 65534  # nobody
-
-
+  
 # Optional: disable webhooks that sometimes fail locally
 prometheusOperator:
   admissionWebhooks:
