--- a/.github/workflows/argo deploy.yaml
+++ b/.github/workflows/argo deploy.yaml
@@ -1,67 +1,73 @@
-name: Deploy Argo CD
+name: Argo CD Deploy (local)
 
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   deploy:
+    name: deploy
     runs-on: self-hosted
     env:
       KUBECONFIG: C:\Users\ealol\.kube\config
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # --- Step 1: Apply Namespace + ArgoCD installation ---
-      - name: Install Argo CD
+      - name: Debug path and files
+        shell: pwsh
+        run: |
+          Write-Host "Current directory:"
+          pwd
+          Write-Host "Files:"
+          ls -R
+
+      # Ensure namespace via YAML (idempotent, no 'already exists' errors)
+      - name: Ensure argocd namespace (YAML)
+        shell: pwsh
         run: |
           kubectl apply -f monitoring/argocd/namespace.yaml
+
+      # Install Argo CD core (official upstream)
+      - name: Install Argo CD core
+        shell: pwsh
+        run: |
           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+          kubectl -n argocd rollout status deploy/argocd-server --timeout=240s
 
-      # --- Step 2: Wait for Argo CD core to be ready ---
-      - name: Wait for Argo CD components
+      # Ingress and Application
+      - name: Configure ingress and register Application
+        shell: pwsh
         run: |
-          echo "Waiting for Argo CD to become ready..."
-          kubectl wait --for=condition=available --timeout=180s deployment/argocd-server -n argocd
-          kubectl get pods -n argocd
-
-      # --- Step 3: Apply admin password + ingress ---
-      - name: Configure Argo CD admin and ingress
-        run: |
-          echo "Applying admin-secret and ingress configuration..."
-          kubectl apply -f monitoring/argocd/admin-secret.yaml
           kubectl apply -f monitoring/argocd/ingress.yaml
-
-      # --- Step 4: Force ArgoCD server to reload secret ---
-      - name: Restart Argo CD server to load new admin password
-        run: |
-          echo "Restarting Argo CD server to reload admin credentials..."
-          kubectl delete pod -l app.kubernetes.io/name=argocd-server -n argocd
-          echo "Waiting for new pod..."
-          kubectl wait --for=condition=available --timeout=180s deployment/argocd-server -n argocd
-
-      # --- Step 5: Register GitHub repo as ArgoCD application ---
-      - name: Register GitHub repo Application
-        run: |
           kubectl apply -f monitoring/argocd/apps/testapp.yaml
+          kubectl -n argocd get ingress
+          kubectl -n argocd get pods
 
-      # --- Step 6: Verify everything ---
-      - name: Verify Argo CD resources
-        run: |
-          echo "=== Pods in argocd namespace ==="
-          kubectl get pods -n argocd
-          echo "=== Services in argocd namespace ==="
-          kubectl get svc -n argocd
-          echo "=== Ingresses in argocd namespace ==="
-          kubectl get ingress -n argocd
-
-      # --- Step 7: Print ArgoCD login info ---
+      # Print the initial admin password detected by Argo CD
+      # (This is Windows/PowerShell-safe decoding)
       - name: Show ArgoCD Login Credentials
+        shell: pwsh
         run: |
-          echo "========================================="
-          echo " ArgoCD is ready!"
-          echo " URL: https://argocd.local"
-          echo " Username: admin"
-          echo " Password: admin123"
-          echo "========================================="
+          $b64 = kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' 2>$null
+          if (-not $b64) {
+            Write-Host "====================================================="
+            Write-Host "ArgoCD is ready!"
+            Write-Host "URL: http://argocd.local"
+            Write-Host "Username: admin"
+            Write-Host "Password: <not found> (secret missing - maybe previously customized?)"
+            Write-Host "You can always get it locally:"
+            Write-Host "kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' | base64 --decode"
+            Write-Host "====================================================="
+            exit 0
+          }
+          $pwd = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($b64))
+          Write-Host "====================================================="
+          Write-Host "ArgoCD is ready!"
+          Write-Host "URL: http://argocd.local"
+          Write-Host "Username: admin"
+          Write-Host "Password: $pwd"
+          Write-Host "====================================================="
