--- a/monitoring/argocd/ingress.yaml
+++ b/monitoring/argocd/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   - host: argocd.local
     http:
       paths:
-      - path: /(.*)
+      - path: /()(.*)
         pathType: Prefix
         backend:
           service:
